multiline text and scaled to cap-height == 1

--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@ Libraries
     - kerning
       - handle char ranges in kern tags
     - documentation
+    - left/right/center align
   - parse ttf?
     - use MacOS api functions to do it?
     - might be more work than it's worth, the Liberation open source
